clusters/building-blocks/edge/apps/envoy-gateway/config/envoy-proxy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-home
    namespace: network
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-home
  namespace: network
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.home.${DOMAIN_NAME}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: envoy-home-tls
      allowedRoutes:
        namespaces:
          from: All
